<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.vaxcare.viewmodel.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/stay_protected_nwith_our_vaccine_app"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutShare"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.onShareAppClicked()}"
                    android:background="@drawable/selector_effect"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:background="@color/primaryColor" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="9dp"
                        android:src="@drawable/ic_share"
                        app:tint="@color/primaryColor" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/share_app_with_friends_and_family"
                        android:textColor="@color/primaryColor"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutRate"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/selector_effect"
                    android:onClick="@{() -> viewModel.onRateAppClicked()}"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:background="@color/primaryColor" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="9dp"
                        android:src="@drawable/ic_rate"
                        app:tint="@color/primaryColor" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/rate_us_on_play_store"
                        android:textColor="@color/primaryColor"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutApps"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/selector_effect"
                    android:onClick="@{() -> viewModel.onMoreAppsClicked()}"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:background="@color/primaryColor" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="9dp"
                        android:src="@drawable/ic_more"
                        app:tint="@color/primaryColor" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/view_more_apps_from_us"
                        android:textColor="@color/primaryColor"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/selector_effect"
                    android:onClick="@{() -> viewModel.onSendFeedbackClicked()}"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:background="@color/primaryColor" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="9dp"
                        android:src="@drawable/ic_feedback"
                        app:tint="@color/primaryColor" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="Share your valuable feedback"
                        android:textColor="@color/primaryColor"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/selector_effect"
                    android:onClick="@{() -> viewModel.onPrivacyPolicyClicked()}"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:background="@color/primaryColor" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="9dp"
                        android:src="@drawable/ic_policy"
                        app:tint="@color/primaryColor" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/visit_our_privacy_policy"
                        android:textColor="@color/primaryColor"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>